@@ -1,3 +1,5 @@
+2006/2/6 -- released version 20060206_trunk
+
 2006/2/5 -- released version 20060205_trunk
 
 2006/2/4 -- released version 20060204_trunk
